--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,16 @@
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^7.4",
+        "juanparati/sendinblue": "^8.0",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.4"
+        "laravel/ui": "^3.4",
+        "nztim/mailchimp": "^4.3",
+        "sendinblue/api-v3-sdk": "7.x.x",
+        "spatie/laravel-newsletter": "^4.10",
+        "vansteen/laravel-sendinblue": "^1.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
