--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "mailchimp/marketing": "^3.0",
         "nztim/mailchimp": "^4.3",
         "sendinblue/api-v3-sdk": "7.x.x",
         "spatie/laravel-newsletter": "^4.10",
