--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "nztim/mailchimp": "^4.3",
         "sendinblue/api-v3-sdk": "7.x.x",
         "spatie/laravel-newsletter": "^4.10",
-        "vansteen/laravel-sendinblue": "^1.4"
+        "vansteen/laravel-sendinblue": "^1.4",
+      "ext-http": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
