--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         "mailchimp/marketing": "^3.0",
         "nztim/mailchimp": "^4.3",
         "sendinblue/api-v3-sdk": "7.x.x",
+        "spatie/data-transfer-object": "^2.8",
         "spatie/laravel-newsletter": "^4.10",
-        "vansteen/laravel-sendinblue": "^1.4",
-      "ext-http": "*"
+        "vansteen/laravel-sendinblue": "^1.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
